Increase gatling timeout

--- a/gatling-charts-highcharts-bundle-3.7.4/conf/gatling.conf
+++ b/gatling-charts-highcharts-bundle-3.7.4/conf/gatling.conf
@@ -16,6 +16,7 @@ gatling {
     #pebbleFileBodiesCacheMaxCapacity = 200  # Cache size for request body Pebble templates, set to 0 to disable
     #feederAdaptiveLoadModeThreshold = 100   # File size threshold (in MB). Below load eagerly in memory, above use batch mode with default buffer size
     #shutdownTimeout = 10000                 # Milliseconds to wait for the actor system to shutdown
+    shutdownTimeout = 30000                 # Milliseconds to wait for the actor system to shutdown
     extract {
       regex {
         #cacheMaxCapacity = 200 # Cache size for the compiled regexes, set to 0 to disable caching
@@ -40,12 +41,14 @@ gatling {
   }
   socket {
     #connectTimeout = 10000                 # Timeout in millis for establishing a TCP socket
+    connectTimeout = 30000                  # Timeout in millis for establishing a TCP socket
     #tcpNoDelay = true
     #soKeepAlive = false                    # if TCP keepalive configured at OS level should be used
     #soReuseAddress = false
   }
   netty {
     #useNativeTransport = true              # if Netty native transport should be used instead of Java NIO
+    useNativeTransport = true               # if Netty native transport should be used instead of Java NIO
     #allocator = "pooled"                   # switch to unpooled for unpooled ByteBufAllocator
     #maxThreadLocalCharBufferSize = 200000  # Netty's default is 16k
   }
